--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -1,18 +1,37 @@
-alembic==1.12.0
 blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.7
-Flask==3.0.0
-Flask-Login==0.6.2
-Flask-Migrate==4.0.5
-Flask-SQLAlchemy==3.1.1
-greenlet==3.0.0
+contourpy==1.1.1
+cycler==0.11.0
+filelock==3.12.4
+Flask==2.3.3
+fonttools==4.42.1
+fsspec==2023.9.1
+huggingface-hub==0.17.2
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-Mako==1.2.4
+kiwisolver==1.4.5
 MarkupSafe==2.1.3
-SQLAlchemy==2.0.21
-SQLAlchemy-Utils==0.41.1
+matplotlib==3.7.3
+mpmath==1.3.0
+networkx==3.1
+numpy==1.26.0
+opencv-python==4.8.0.76
+packaging==23.1
+Pillow==10.0.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
+PyYAML==6.0.1
+requests==2.31.0
+safetensors==0.3.3
+six==1.16.0
+sympy==1.12
+timm==0.9.7
+torch==2.0.1
+torchvision==0.15.2
+tqdm==4.66.1
 typing_extensions==4.8.0
-urldecode==0.1
-uWSGI==2.0.22
-Werkzeug==3.0.0
+urllib3==2.0.5
+Werkzeug==2.3.7
